@@ -24,7 +24,6 @@ class TestNetHTTPS < Test::Unit::TestCase
 
   CONFIG = {
     'host' => '127.0.0.1',
-    'port' => 0,
     'proxy_host' => nil,
     'proxy_port' => nil,
     'ssl_enable' => true,
